add visualization to show object by its coordinate

--- a/notebooks/simple-train-small-case-2.ipynb
+++ b/notebooks/simple-train-small-case-2.ipynb
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "b525b16c",
       "metadata": {
         "colab": {
@@ -70,7 +70,7 @@
         "import torch.optim as optim\n",
         "from torch.utils.data import Dataset, DataLoader\n",
         "from PIL import Image\n",
-        "from scipy.ndimage import gaussian_filter\n",
+        "from scipy.ndimage import gaussian_filter, maximum_filter\n",
         "import warnings\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
@@ -893,6 +893,41 @@
       },
       "outputs": [],
       "source": [
+        "def visualize_detections(original_image, pred_map, pred_count, true_count, img_name, downscale_factor=16, threshold_scale=2.0):\n",
+        "    \"\"\"\n",
+        "    Finds peaks in the density map and draws circles on the original image.\n",
+        "    \"\"\"\n",
+        "    # Find local maxima in the density map\n",
+        "    footprint = np.ones((3, 3))\n",
+        "    local_max = maximum_filter(pred_map, footprint=footprint) == pred_map\n",
+        "    \n",
+        "    # Apply a threshold to filter out weak peaks\n",
+        "    threshold = pred_map.mean() * threshold_scale\n",
+        "    peaks = (pred_map > threshold) & local_max\n",
+        "    \n",
+        "    # Get coordinates of the peaks\n",
+        "    peak_coords = np.argwhere(peaks) # (row, col) format\n",
+        "\n",
+        "    # --- Visualization ---\n",
+        "    plt.figure(figsize=(10, 8))\n",
+        "    \n",
+        "    # Draw circles on the original image\n",
+        "    img_with_circles = original_image.copy()\n",
+        "    orig_h, orig_w = img_with_circles.shape[:2]\n",
+        "    \n",
+        "    for y_map, x_map in peak_coords:\n",
+        "        # Scale coordinates from map size back to original image size\n",
+        "        x_orig = int((x_map + 0.5) * downscale_factor * (orig_w / 224))\n",
+        "        y_orig = int((y_map + 0.5) * downscale_factor * (orig_h / 224))\n",
+        "        \n",
+        "        # Draw a red circle\n",
+        "        cv2.circle(img_with_circles, (x_orig, y_orig), radius=15, color=(255, 0, 0), thickness=3)\n",
+        "\n",
+        "    plt.imshow(img_with_circles)\n",
+        "    plt.title(f'Detections for: {img_name}\\nPredicted Count: {pred_count:.2f} | Ground Truth: {true_count}', fontsize=14)\n",
+        "    plt.axis('off')\n",
+        "    plt.show()\n",
+        "\n",
         "print(\"Evaluating model on training images (to check learning)...\")\n",
         "print(\"=\" * 50)\n",
         "\n",
