chore: change base path on local environment

--- a/notebooks/final_sfcn.ipynb
+++ b/notebooks/final_sfcn.ipynb
@@ -189,7 +189,7 @@
     "\n",
     "    else:  # local\n",
     "        # Local paths - modify these for your setup\n",
-    "        base_path = \"data\"  # Change this to your local dataset path\n",
+    "        base_path = \"../../data\"  # Change this to your local dataset path\n",
     "        return {\n",
     "            'img_dir': f\"{base_path}/train/images\",\n",
     "            'label_dir': f\"{base_path}/train/labels\",\n",
