fix: local base path dataset

--- a/notebooks/scratch/nb_01.ipynb
+++ b/notebooks/scratch/nb_01.ipynb
@@ -141,7 +141,7 @@
     "    \n",
     "    else:  # local\n",
     "        # Local paths\n",
-    "        base_path = \"../data\"\n",
+    "        base_path = \"../../data\"\n",
     "        return {\n",
     "            'img_dir': f\"{base_path}/train/images\",\n",
     "            'label_dir': f\"{base_path}/train/labels\",\n",
